# vmak

./: .gitignore  CMakeLists.txt  CMakePresets.json  Readme.adoc
install/mak/: CMakeLists.txt  arguments.hpp  bounded_array.hpp  builder.hpp  builders.hpp  environment.hpp  main.cpp  project.hpp  result.hpp  stage.hpp  test.cpp  work_directory.hpp
install/mak/builders/: cmake.hpp  conan.hpp  ninja.hpp
src/: CMakeLists.txt  arguments.hpp  builder.hpp  builders.hpp  json.hpp  main.cpp  presets.hpp  result.hpp  tasks.hpp  work_directory.hpp
src/builders/: cmake.hpp  cmake_preset.hpp  conan.hpp  meson.hpp  ninja.hpp
src/tests/: arguments_tests.cpp  test.cpp
src/tests/conan/: global.conf  settings.yml
src/tests/conan/profiles/: clang  default
src/tests/test_presets/a/: test.json
